Fix title formatting and update content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="resume-section">
       <h2>Professional Summary <span class="badge">QA Expert</span></h2>
-      <p>A Senior QA Consultant with over 4.9 years of experience specializing in <span class="badge">Manual Testing</span>, <span class="badge">Automation</span>, <span class="badge">Cloud</span>, and <span class="badge">Pharma</span> environments. Proven expertise in test case design, defect management, and compliance with industry standards (FDA, GxP, 21 CFR Part 11). Skilled in SQL, Azure DevOps, Databricks, and automated cloud solutions, with hands-on experience in SDLC and Agile methodologies. Adept at collaborating across teams to ensure high-quality deliverables in fast-paced environments. Recently transitioned from manual testing to automation testing, developing an automation suite using Selenium and Java, significantly enhancing testing efficiency and coverage.</p>
+      <p>A Senior QA Consultant with over 4.9 years of experience specializing in <span class="badge">Manual Testing</span>, <span class="badge">Automation</span>, <span class="badge">Cloud</span>, and <span class="badge">Enterprise</span> environments. Proven expertise in test case design, defect management, and compliance with industry standards. Skilled in SQL, Azure DevOps, Databricks, and automated cloud solutions, with hands-on experience in SDLC and Agile methodologies. Adept at collaborating across teams to ensure high-quality deliverables in fast-paced environments. Recently transitioned from manual testing to automation testing, developing an automation suite using Selenium and Java, significantly enhancing testing efficiency and coverage.</p>
     </section>
 
     <section class="resume-section">
@@ -137,10 +137,10 @@
         
         <h3>Key Responsibilities</h3>
         <ul>
-          <li>Developed comprehensive test plans aligned with FDA guidelines and GxP requirements</li>
+          <li>Developed comprehensive test plans aligned with industry standards and quality requirements</li>
           <li>Executed end-to-end testing of the reporting tool, including functionality, integration, and performance testing</li>
-          <li>Validated data accuracy and consistency across multiple pharmaceutical safety databases</li>
-          <li>Performed thorough validation of compliance with 21 CFR Part 11 requirements</li>
+          <li>Validated data accuracy and consistency across multiple enterprise databases</li>
+          <li>Performed thorough validation of compliance with industry requirements</li>
         </ul>
 
         <h3>Technical Implementation</h3>
