Update resume content to use general industry terms

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         <li>Actively involved in defect management and bug reporting, utilizing proficient bug-tracking tools to ensure software reliability.</li>
         <li>Adept in SQL with hands-on experience working with databases such as Hana and DBeaver.</li>
         <li>Solid foundation in SQL, supporting data-related tasks and insights.</li>
-        <li>Deep-rooted understanding of regulatory standards, particularly FDA guidelines, GxP, and 21 CFR Part 11, ensuring adherence and product quality in the pharmaceutical sector.</li>
+        <li>Deep-rooted understanding of industry standards and best practices, ensuring adherence to quality processes and maintaining high product quality.</li>
         <li>Well-versed in software development life cycle methodologies and experienced in Agile environments.</li>
-        <li>Familiarity with pharmacovigilance processes and adverse event reporting.</li>
+        <li>Strong expertise in quality assurance processes and comprehensive reporting systems.</li>
         <li>Experience with Azure DevOps (ADO) and working with Azure cloud applications like Databricks and Azure Data Lake Storage (ADLS).</li>
         <li>Strong written and verbal communication skills, demonstrated through effective collaboration with stakeholders and addressing issues.</li>
         <li>Proven track record of navigating ambiguous situations and making critical decisions, evidenced by successfully executing 90 complex test cases, each with 40-50 steps, within a stringent 7-day deadline despite limited staffing resources.</li>
