Remove specific regulatory references

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <li>Framework: Azure-based architecture with secure data integration</li>
           <li>Testing Tools: Azure DevOps, Selenium, Postman</li>
           <li>Database Testing: SQL, Hana DB</li>
-          <li>Compliance: FDA guidelines, GxP, 21 CFR Part 11</li>
+          <li>Compliance: Industry standards and security best practices</li>
         </ul>
 
         <h3>Achievements</h3>
